--- a/skins/monobook/main.css
+++ b/skins/monobook/main.css
@@ -1345,10 +1345,6 @@ input#wpSave, input#wpDiff {
 	margin-right: 0.33em;
 }
 
-#editform .editOptions {
-	display: inline;
-}
-
 #wpSave {
 	font-weight: bold;
 }
